Fixed Job Posting text from going off screen on mobile

--- a/theme_editor.css
+++ b/theme_editor.css
@@ -377,4 +377,14 @@ option:hover {
     #form_view table th {
       font-size: 1.3rem;
     }
+
+    /*Move long links to next line, not off page*/
+    #form_view table a {
+      word-wrap: break-word;
+    }
+
+    /*Move long strings to next line*/
+    #form_view table td {
+      word-wrap: break-word;
+    }
 }
